--- a/public/css/src/search/search_filters.css
+++ b/public/css/src/search/search_filters.css
@@ -5,8 +5,8 @@
     top: 58px;
     z-index: 100;
     background: #fff;
-    width: 360px;
-    padding: 30px 0px;
+    width: 400px;
+    padding: 30px 0px 30px 16px;
     box-sizing: border-box;
     box-shadow: 0 0 14px #949494;
     flex-flow: column nowrap;
@@ -16,8 +16,12 @@
     flex-flow: column nowrap;
     margin: 0 0 20px 0;
 }
-.search-filters-section.--gender {}
-.search-filters-section.--age {}
+.search-filters-section.--gender {
+    flex: 1 0 auto;
+}
+.search-filters-section.--age {
+    flex: 1 0 auto;
+}
 .search-filters-section.--countries {}
 .search-filters-section__title {
     font-size: 16px;
