--- a/public/css/lib/jscrollpane/jscrollpane.css
+++ b/public/css/lib/jscrollpane/jscrollpane.css
@@ -9,6 +9,7 @@
    overflow: hidden;
    position: relative;
    display: flex;
+   outline: none;
 }
 
 .jspPane {
@@ -17,6 +18,7 @@
    z-index: 1;
    display: flex;
    flex-flow: row wrap;
+   outline: none;
 }
 
 .jspVerticalBar {
@@ -32,8 +34,7 @@
    bottom: 0;
    left: 0;
    width: 100%;
-   height: 16px;
-   background: red;
+   height: 4px;
 }
 
 .jspCap {
