--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -2,3 +2,102 @@
 .map {
     width: 100%;
 }
+
+.app-section.--map {
+	height: 100vh;
+	position: relative;
+	top: -2px;
+}
+.js-map-wrap {
+	height: 100%;
+	width: 100%;
+	position: absolute!important;
+}
+
+.map__icon {
+	position: absolute;
+	z-index: 1;
+	font-size: 30px;
+}
+.map__icon.--geoloc,
+.map__icon.--change-location {
+	bottom: 70px;
+	font-size: 36px;
+	cursor: pointer;
+}
+
+.map__icon.--change-location {
+	right: 20px;
+}
+.map__icon.--create-before {
+	background: #1B69EC;
+	color: white;
+	height: 50px;
+	width: 50px;
+	font-size: 20px;
+	right: 20px;
+	top: 22px;
+	cursor: pointer;
+	z-index: 10;
+}
+.map__icon.--create-before:hover {
+	background: rgba(27, 105, 236, 0.75);
+}
+
+.map__icon.--geoloc {
+	left: 20px;
+}
+.map__icon.--location {
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+.map__overlay {
+	background: rgba(0,0,0,.15);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	display: none;
+}
+
+.map-browse {
+	position: absolute;
+	bottom: 68px;
+	right: 76px;
+	width: 300px;
+	height: 44px;
+	border-radius: 100px;
+	z-index: 10;
+	box-sizing: border-box;
+	display: none;
+}
+.map-browse input {
+    width: 330px;
+    border-radius: 2px;
+    padding: 0 30px;
+    font-family: 'Alegreya sans';
+    font-size: 16px;
+    background: rgba(255, 255, 255, 0.9);
+    border: none;
+    border-bottom: 3px solid #191919;
+}
+
+.map-browse input ::-webkit-input-placeholder {
+   color: black!important;
+}
+
+.map-browse input :-moz-placeholder { /* Firefox 18- */
+   color: black!important; 
+}
+
+.map-browse input ::-moz-placeholder {  /* Firefox 19+ */
+   color: black!important;  
+}
+
+.map-browse input :-ms-input-placeholder {  
+   color: black!important; 
+}
+
