--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -691,7 +691,7 @@
 
       <div class="be-create">
         <div class="be-create__close">
-          <div class="icon icon-close"></div>
+          <div class="icon icon-cancel"></div>
         </div>
         <div class="be-create__title">
           <h1 data-lid="be_create_title"></h1>
@@ -717,7 +717,7 @@
         <div class="be-create-row --date">
           <div class="be-create__icon --round-icon"><i class="icon icon-calendar"></i></div>
           <div class="be-create-row__input">
-            <input data-lid="be_create_date_placeholder"/>
+            <input data-lid="be_create_date_placeholder" readonly/>
           </div>
         </div>
         <div class="be-create-row --hour">
